2012-06-29  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync with English documentation (rev.1741).

2012-06-29  Ethan A Merritt  <merritt@u.washington.edu>

	* term/canvas.trm: ctx.fillText() uses fillStyle rather than strokeStyle

	* src/graphics.h src/graph3d.h src/graphics.c src/plot2d.c:
	New modifier for the `title` keyword in plot commands.
	`title ... at {beginning|end}` writes the plot title on the graph
	itself, immediately next to the corresponding plot. This is independent
	of the normal key.

	* docs/gnuplog.doc demo/nokey.dem demo/all.dem:
	Document new option and provide a demo.

2012-06-24  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datafile.c:  plot ... using "a":"b" was not setting the 
	parse_1st_row_as_headers flag.  Bug #3536514

2012-06-24  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/wgraph.c (draw_new_pens) src/win/wgnuplib.h (struct GW)
	term/win.trm (WIN_options): Terminal option "rounded|butt".

2012-06-23  Bastian Maerkisch  <bmaerkisch@web.de>

	* demo/approximate.dem demo/cities.dem demo/enhanced-utf8.dem
	demo/epslatex.dem demo/fontfile.dem demo/fontfile_latex.dem
	demo/hypertext.dem demo/transparent.dem demo/utf8.dem:
	Restore original encoding.

	* src/set.c (set_encoding): Allow string valued variables as
	parameters.

2012-06-23  Jérôme lodewyck  <lodewyck@users.sourceforge.net>

	* configure.in src/Makefile.am src/qtterminal/qt_term.cpp
	src/qtterminal/qt_term_mac.m: Proper handling of the qt terminal dock
	icons on Mac OS

2012-06-19  Ethan A Merritt  <merritt@u.washington.edu>

	* src/datablock.c src/datablock.h:  New files
	
	* src/command.c src/datafile.c src/eval.c src/fit.c src/gp_types.h
	src/Makefile.am src/misc.c src/parse.c src/scanner.c src/show.c
	src/stats.c src/tables.c:  Add support for named data blocks.

	* docs/gnuplot.doc demo/imageNaN.dem demo/heatmaps.dem:
	Document and provide demos for named data blocks.

	Example use of named data blocks: